Fix site contrast

--- a/helloworld/public/main.css
+++ b/helloworld/public/main.css
@@ -17,7 +17,7 @@
   line-height: 1.2rem;
   font-size: 16px;
   font-weight: 400;
-  color: #4d9c25;
+  color: rgb(215, 246, 152);
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
@@ -41,7 +41,7 @@ main {
   gap: var(--gapwidth);
 }
 .line-link {
-  color: #2f5c19;
+  color: rgb(146, 167, 103);
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -53,11 +53,11 @@ main {
   width: calc(var(--textwidth) + var(--linenumberwidth) + var(--gapwidth));
   overflow-x: auto;
   overflow-y: hidden;
-  background-color: rgb(63, 63, 63);
+  background-color: rgb(35, 35, 35);
 }
 
 .codeblock {
-  color: rgb(215, 246, 152);
+  color: rgb(152, 235, 246);
   white-space: pre;
 }
 
